# CLI

./: README.md  pyproject.toml  temp.py
.cursor/: mcp.json
.cursor/rules/: rule.mdc
agent_task/: api.py  cli.py  task_manager.py
examples/: publish_task.py
test/: README.md  taskhub.yaml
test/examples/clone-task/: README.md  clone.py  taskhub.yaml  test_clone.py
test/examples/hello-world/: README.md  hello.py  taskhub.yaml  test_hello.py
test/mcp/simple/: text_processor.py
test/rules/: rule.mdc
test/rules/basic/: readme_validator.py
tests/: test_cli.py
